# battlesnake

./: Cargo.toml  Dockerfile  fly.toml
src/: lib.rs  main.rs  state.rs
src/model/: agent.rs  battlesnake.rs  board.rs  cell.rs  mod.rs  move_.rs  position.rs  snake.rs
src/model/payload/: battlesnake.rs  board.rs  end.rs  game.rs  initialize.rs  mod.rs  move_.rs  position.rs  ruleset.rs  start.rs
src/web/: error.rs  mod.rs  router.rs
src/web/router/: end.rs  index.rs  mod.rs  move_.rs  start.rs
