[package]
name = "battlesnake"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
nanorand = "0.7.0"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
